--- a/index.html
+++ b/index.html
@@ -1,147 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bobo's Plate</title>
-  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&family=Lora&display=swap" rel="stylesheet">
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Lora', serif;
-      background-color: #fffbea;
-      color: #333;
-    }
-    header {
-      background: #d4af37;
-      color: white;
-      padding: 1rem;
-      position: sticky;
-      top: 0;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-    header h1 {
-      font-family: 'Cormorant Garamond', serif;
-      margin: 0;
-    }
-    nav a {
-      color: white;
-      margin: 0 10px;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    .hero {
-      text-align: center;
-      padding: 2rem;
-      background: linear-gradient(to bottom, #fffbea, #fff);
-    }
-    .hero h2 {
-      font-family: 'Cormorant Garamond', serif;
-      font-size: 2.5rem;
-      color: #d4af37;
-    }
-    .carousel {
-      display: flex;
-      overflow-x: auto;
-      gap: 1rem;
-      margin: 1rem 0;
-    }
-    .carousel img {
-      height: 200px;
-      border-radius: 10px;
-      transition: transform 0.3s;
-    }
-    .carousel img:hover {
-      transform: scale(1.05);
-    }
-    .buttons {
-      margin-top: 1rem;
-    }
-    .buttons a {
-      background: #d4af37;
-      color: white;
-      padding: 10px 20px;
-      margin: 0 10px;
-      border-radius: 5px;
-      text-decoration: none;
-      transition: background 0.3s;
-    }
-    .buttons a:hover {
-      background: #b8860b;
-    }
-    .section {
-      padding: 2rem;
-      text-align: center;
-    }
-    .cards {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 1rem;
-    }
-    .card {
-      background: white;
-      border: 2px solid #d4af37;
-      border-radius: 10px;
-      width: 200px;
-      padding: 1rem;
-      transition: transform 0.3s;
-    }
-    .card:hover {
-      transform: translateY(-5px);
-    }
-    footer {
-      background: #d4af37;
-      color: white;
-      text-align: center;
-      padding: 1rem;
-    }
-    @media (max-width: 600px) {
-      .cards {
-        flex-direction: column;
-        align-items: center;
-      }
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <h1>Bobo's Plate</h1>
-    <nav>
-      <a href="#menu">Menu</a>
-      <a href="#order">Order</a>
-      <a href="#why">Why Choose Us</a>
-      <a href="#contact">Contact</a>
-    </nav>
-  </header>
-
-  <section class="hero">
-    <h2>Authentic Swahili Dishes</h2>
-    <div class="carousel">
-      <img src="food1.jpg" alt="Mahamri">
-      <img src="food2.jpg" alt="Pilau">
-      <img src="food3.jpg" alt="Fresh Juice">
-    </div>
-    <p>Made Fresh Daily • Fast Delivery • Pay on Delivery</p>
-    <div class="buttons">
-      <a href="#order">Order Now</a>
-      <a href="#menu">View Menu</a>
-    </div>
-    <p><strong>Service Area:</strong> Mvita, Mombasa</p>
-  </section>
-
-  <section id="menu" class="section">
-    <h2>Our Menu</h2>
-    <div class="cards">
-      <div class="card"><h3>Breakfast</h3><p>Mahamri, Viazi Karai, Bajia</p></div>
-      <div class="card"><h3>Lunch</h3><p>Rice & Fish Curry, Pilau, Biryani</p></div>
-      <div class="card"><h3>Fresh Juices</h3><p>Mango, Passion, Mixed Fruit</p></div>
-    </div>
-  </section>
-
-  <section id="order" class="section">
+o bottom, #fffbea, #fff);
+    
+ction">
     <h2>Order Now</h2>
     <p>Call: <a href="tel:0798985120">0798 985 120</a></p>
     <p>WhatsApp: <a href="https://wa.me/254798985120">0798 985 120</a></p>
